user profile, form submit, get enabled promotions
