# tools/generators/openapi/target/classes/META-INF/openapi/openapi.yaml
@@ -20,21 +20,54 @@ paths:
                   value:
                     {
                       "firstName": "Jane",
+                      "middleName": "Ann",
                       "lastName": "Doe",
-                      "streetAddress": "1201 Peachtree Street NE",
-                      "city": "Atlanta",
-                      "state": "GA",
-                      "zip": 30361,
-                      "phone": 4048792261
+                      "email": "email@backbase.com",
+                      "phone": 4048792261,
+                      "ssn": 1234,
+                      "address": {
+                        "streetAddress": "1201 Peachtree Street NE",
+                        "city": "Atlanta",
+                        "state": "GA",
+                        "zip": 30361
+                      }
                     }
               schema:
                 $ref: '#/components/schemas/UserProfile'
-  /card-promotion/submit:
+  /users/me/promotion:
+    get:
+      tags:
+        - profile
+      operationId: getUserPromotions
+      summary: Returns personal promotion data
+      responses:
+        '200':
+          description: |-
+            200 response
+          content:
+            application/json:
+              examples: 
+                response:
+                  value:
+                    {
+                      "registered": false,
+                      "promotions": []
+                    }
+              schema:
+                $ref: '#/components/schemas/Promotions'
+  /promotion/submit:
     post:
       tags:
-        - cardPromotion
-      operationId: submitCardPromotionData
-      summary: Submit form data to return card promotions
+        - promotion
+      operationId: submitPromotionForm
+      summary: Submit form data to return promotions
+      requestBody:
+        description: Optional description in *Markdown*
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SubmitPromotionForm'
       responses:
         '200':
           description: |-
@@ -47,103 +80,156 @@ paths:
                     [
                       {
                         "id": 1235749828,
-                        "name": "Hotels.com Rewards Visa Credit Card",
-                        "heading": "Unlock your next escape",
-                        "description": "<p><strong>Get 2 reward nights worth $250 total (max $125 per night)*</strong> when you spend <strong>$1,000</strong> in purchases in the first 3 months</p><p><sup>*</sup>Excludes taxes and fees. If a night costs less than $125, you won't get the difference.</p>",
-                        "image": "https://creditcards.wellsfargo.com/W-Card-PaidDigital/v12-1/images/Products/HotelRewards/hotels_card_art_d.png"
+                        "heading": "Hotels.com Rewards Visa Credit Card",
+                        "subheading": "Unlock your next escape",
+                        "image": "https://creditcards.wellsfargo.com/W-Card-PaidDigital/v12-1/images/Products/HotelRewards/hotels_card_art_d.png",
+                        "offer": {
+                          "amount": 300,
+                          "text": "Online Statement Credit Offer"
+                        },
+                        "description": "<p><strong>Get 2 reward nights worth $250 total (max $125 per night)*</strong> when you spend <strong>$1,000</strong> in purchases in the first 3 months</p><p><sup>*</sup>Excludes taxes and fees. If a night costs less than $125, you won't get the difference.</p>"
                       },
                       {
                         "id": 4562817599,
-                        "name": "Reflect Card",
-                        "heading": "Enjoy our lowest intro APR for up to 21 months",
-                        "description": "<p><strong>0% intro APR for 18 months</strong> from account opening on purchases and qualifying balance transfers.</p><p><strong>Intro APR extension of up to3 months</strong> with on-time minimum payments during the introductory and extension periods.</p><p><strong>13.24% to 25.24% variable APR</strong>thereafter. Balance transfers made within 120 days qualify for the intro rate and fee.</p>",
-                        "image": "https://creditcards.wellsfargo.com/W-Card-PaidDigital/v12-1/images/Products/Reflect/Reflect_hero_d.png"
+                        "heading": "Reflect Card",
+                        "subheading": "Enjoy our lowest intro APR for up to 21 months",
+                        "image": "https://creditcards.wellsfargo.com/W-Card-PaidDigital/v12-1/images/Products/Reflect/Reflect_hero_d.png",
+                        "offer": {
+                          "amount": 300,
+                          "text": "Online Statement Credit Offer"
+                        },
+                        "description": "<p><strong>0% intro APR for 18 months</strong> from account opening on purchases and qualifying balance transfers.</p><p><strong>Intro APR extension of up to3 months</strong> with on-time minimum payments during the introductory and extension periods.</p><p><strong>13.24% to 25.24% variable APR</strong>thereafter. Balance transfers made within 120 days qualify for the intro rate and fee.</p>"
                       },
                       {
                         "id": 789121635,
-                        "name": "Active Cash Card",
-                        "heading": "Earn unlimited 2% cash rewards on purchases",
-                        "description": "<p><strong>Earn a $200 cash rewards bonus</strong> when you spend $1,000 in purchases in the first 3 months.</p><p><strong>0% intro APR for 15 months</strong> from account opening on purchases and qualifying balance transfers.</p><p><strong>15.24%, 20.24% or 25.24%</strong>variableAPR thereafter. Balance transfers made within 120 days qualify for the intro rate and fee.</p>",
-                        "image": "https://creditcards.wellsfargo.com/W-Card-PaidDigital/v12-1/images/Products/ActiveCash/active_cash_card.png"
+                        "heading": "Active Cash Card",
+                        "subheading": "Earn unlimited 2% cash rewards on purchases",
+                        "image": "https://creditcards.wellsfargo.com/W-Card-PaidDigital/v12-1/images/Products/ActiveCash/active_cash_card.png",
+                        "offer": {
+                          "amount": 300,
+                          "text": "Online Statement Credit Offer"
+                        },
+                        "description": "<p><strong>Earn a $200 cash rewards bonus</strong> when you spend $1,000 in purchases in the first 3 months.</p><p><strong>0% intro APR for 15 months</strong> from account opening on purchases and qualifying balance transfers.</p><p><strong>15.24%, 20.24% or 25.24%</strong>variableAPR thereafter. Balance transfers made within 120 days qualify for the intro rate and fee.</p>"
                       },
                     ]
               schema:
-                $ref: '#/components/schemas/CardPromotion'
-  /card-promotion/accept:
-    post:
-      tags:
-        - cardPromotion
-      operationId: acceptCardPromotion
-      summary: Accept 1 card promotion 
-      requestBody:
-        description: Optional description in *Markdown*
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AcceptCardPromotion'
-      responses:
-        '200':
-          description: |-
-            200 response
-          content:
-            application/json:
-              examples: 
-                response:
-                  value:
-                    {}
+                $ref: '#/components/schemas/Promotions'
 components:
   schemas:
     UserProfile:
       type: object
       required:
         - firstName
+        - middleName
         - lastName
-        - streetAddress
+        - email
+        - phone
+        - ssn
+        - address
+      properties:
+        firstName:
+          type: string
+        middleName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        phone:
+          type: number
+        ssn:
+          type: number
+        address:
+          $ref: '#/components/schemas/UserAddress'
+    UserProfileAddress:
+      type: object
+      required:
+        - addressStreet
         - city
         - state
         - zip
       properties:
-        firstName:
+        addressStreet:
           type: string
-        lastName:
-          type: string
-        streetAddress:
+        buildingLot:
           type: string
         city:
           type: string
         state:
           type: string
-        zip:
+        zip: 
           type: number
+    UserProfilePromotion:
+      type: object
+      required:
+        - enabled
+        - promotions
+      properties:
+        enabled:
+          type: boolean
+        promotions:
+          $ref: '#/components/schemas/Promotions'
+    SubmitPromotionForm:
+      type: object
+      required:
+        - firstName
+        - middleName
+        - lastName
+        - email
+        - phone
+        - ssn
+        - maritalStatus
+        - employmentStatus
+        - address
+      properties:
+        firstName:
+          type: string
+        middleName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
         phone:
           type: number
-    CardPromotion:
+        ssn:
+          type: number
+        maritalStatus:
+          type: string
+        employmentStatus:
+          type: string
+        address:
+          $ref: '#/components/schemas/UserAddress'
+    Offer:
+      type: object
+      required:
+        - amount
+        - text
+      properties:
+        amount:
+          type: number
+        text:
+          type: string
+    Promotion:
       type: object
       required:
         - id
-        - name
         - heading
-        - description
+        - offer
       properties:
         id:
           type: number
-        name:
-          type: string
         heading:
           type: string
-        description:
+        subheading:
           type: string
         image: 
           type: string
-    CardPromotions:
+        offer:
+          $ref: '#/components/schemas/Offer'
+        description:
+          type: string
+    Promotions:
       type: array
       items:
-        $ref: '#/components/schemas/CardPromotion'
-    AcceptCardPromotion:
-      type: object
-      required:
-        - id
-      properties:
-        id:
-          type: number
+        $ref: '#/components/schemas/Promotion'
