# tools/generators/openapi/target/generated-sources/openapi/model/models.ts
@@ -1,3 +1,6 @@
-export * from './acceptCardPromotion';
-export * from './cardPromotion';
+export * from './offer';
+export * from './promotion';
+export * from './submitPromotionForm';
 export * from './userProfile';
+export * from './userProfileAddress';
+export * from './userProfilePromotion';
