# tools/generators/openapi/target/generated-sources/openapi/public_api.ts
@@ -3,9 +3,9 @@ export * from './variables';
 export * from './configuration';
 export * from './api.module';
 
-export * from './api/cardPromotion.service';
-
-export * from './api/cardPromotion.service.mocks';
 export * from './api/profile.service';
 
 export * from './api/profile.service.mocks';
+export * from './api/promotion.service';
+
+export * from './api/promotion.service.mocks';
